# freezit

./: .gitignore  next.config.js  package.json  tsconfig.json
api/: .example.env  Cargo.toml
api/db/: .env.example  docker-compose.yml  setup_test_db.sh  stack.yml
api/db/old_migrations/2023-10-12-211629_create_products/: up.sql
api/db/old_migrations/2023-10-12-212134_create_storage/: up.sql
api/db/old_migrations/2023-10-16-184948_update_product/: down.sql
api/db/old_migrations/2023-10-16-190142_fix_storage_nullables/: down.sql  up.sql
api/db/old_migrations/2023-10-16-200704_fix_storage_weight_type/: down.sql  up.sql
api/db/old_migrations/2023-10-18-195450_add_foreign_key_productid_storage/: down.sql
api/db/old_migrations/2023-10-31-155105_add_drawer_id_storage/: up.sql
api/migrations/2023-10-16-184948_update_product/: up.sql
api/migrations/2023-10-18-192310_fix_product_unique_name/: down.sql  up.sql
api/migrations/2023-10-18-195450_add_foreign_key_productid_storage/: up.sql
api/migrations/2023-10-31-155105_add_drawer_id_storage/: down.sql
api/migrations/2023-12-09-180556_final_dev_migration/: down.sql  up.sql
api/src/: connection.rs  core.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
api/src/core/: connection.rs  error.rs  query.rs
api/src/routes/: drawers.rs  freezers.rs  products.rs  root.rs  storage.rs
api/tests/: api.rs  test_internals.rs  test_internals_context.rs
api/tests/common/: db.rs  db_data.rs  mod.rs
api/tests/routes/: drawers.rs  freezers.rs  mod.rs  products.rs  root.rs  storage.rs
src/app/: layout.tsx
(+12 files in other folders)
