[package]
name = "api"
version = "0.1.0-alpha"
edition = "2021"
authors = ["mocrsteel <https://github.com/mocrsteel>"]
repository = "https://github.com/mocrsteel/freezit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tower-log", "tracing", "tokio"] }
chrono = { version = "0.4.31", features=["serde"] }
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
serde = "1.0.190"
serde_json = "1.0.107"
test-log = "0.2.13"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typeshare = "1.0.1"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

